# cad-to-robot-backend

./: README.md  agent.py  main.py  pyproject.toml  requirements.txt  run_conversion.py  system_prompts.txt
app/: agent.py  main.py  system_prompt.txt  system_prompts_v2.txt  tool_calling.py  websockets.py
app/augmented_tools/: read_urdf.py  remove_duplicate_links.py  run_onshape_conversion.py
app/services/: run_onshape_to_robot.py
app/tools/: read_mates.py  read_urdf.py  remove_duplicate_links.py  rename_mates.py  set_link_materials.py
augmented_tools/: __init__.py  read_mates.py  rename_mates.py  set_material.py
data/folding-mechanism/: assembly_data.json  assembly_data.json.backup  config.json  features_data.json  features_data.json.backup  matevalues_data.json  matevalues_data.json.backup  robot.urdf  robot.urdf.backup
data/folding-mechanism/assets/: back_left_axle.part  back_left_axle.stl  back_left_base_fork.part  back_left_base_fork.stl  back_link.part  back_link.stl  back_right_axle.part  back_right_axle.stl  (+46 more)
data/stable-wheel-legged/: assembly_data.json  config.json  features_data.json  matevalues_data.json  robot.urdf
onshape/api/: client.py  onshape.py
onshape/src/: assembly.py  config.py  csg.py  exporter.py  exporter_urdf.py  processor_ball_to_euler.py  processor_collision_as_visual.py  processor_convex_decomposition.py  processor_fixed_links.py  processor_merge_parts.py  processor_no_collision_meshes.py  processor_scad.py  processor_simplify_stls.py  robot.py  robot_builder.py
tools/: read_urdf.py  remove_duplicate_links.py  rename_mates.py
(+31 files in other folders)
