[project]
name = "cad-to-robot-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "commentjson>=0.9.0",
    "fastapi>=0.115.12",
    "numpy-stl>=3.2.0",
    "numpy>=2.3.0",
    "openai-agents>=0.0.17",
    "openai>=1.85.0",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.3",
    "websockets>=15.0.1",
]
